pgadmin entity framework

--- a/FootballScoreApi/appsettings.json
+++ b/FootballScoreApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionString": {
+    "FootballApp":"Server=localhost;Database=FootballApp;User Id=ed;Password=password;"
+  }
 }
