--- a/FootballScoreApi/appsettings.json
+++ b/FootballScoreApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionString": {
-    "FootballApp":"Server=localhost;Database=FootballApp;User Id=ed;Password=password;"
+  "ConnectionStrings": {
+    "FootballApp":"Host=localhost;Port=5432;Database=FootballApp;User=efuser;Password=password;"
   }
 }
