mediatr och första user

--- a/FootballScoreApi/appsettings.json
+++ b/FootballScoreApi/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "FootballApp":"Host=localhost;Port=5432;Database=FootballApp;User=efuser;Password=password;"
+    "FootballApp":"Host=localhost;Port=5432;Database=FootballApp;User Id=postgres;Password=password;"
   }
 }
